time coefficient - implemented

--- a/OldGame/OldGame.vcxproj
+++ b/OldGame/OldGame.vcxproj
@@ -181,6 +181,7 @@
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="StateManager.cpp" />
     <ClCompile Include="StaticObject.cpp" />
+    <ClCompile Include="Time.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
