--- a/OldGame/OldGame.vcxproj.filters
+++ b/OldGame/OldGame.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClInclude Include="ObjectHandler.h">
       <Filter>GameCont</Filter>
     </ClInclude>
+    <ClInclude Include="MovmentVector.h">
+      <Filter>GameCont</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Setup">
